--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="List.html">TO DO</a></li>
             <li><a href="Calculator.html">Calculator</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="Quiz.html">quiz</a></li>
         </ul>
         <div class="rightNav">
             <input type="text" 
