--- a/index.html
+++ b/index.html
@@ -90,14 +90,15 @@
 </head>
 
 <body>
+  <center>
     <nav class="navbar">
         <ul class="nav-list">
-            <li><a href="#home">Home</a></li>
+            <li><a href="Calander.html">calender</a></li>
             <li><a href="List.html">TO DO</a></li>
             <li><a href="Calculator.html">Calculator</a></li>
             <li><a href="Quiz.html">quiz</a></li>
         </ul>
-
+</center>
         </div>
     </nav>
 
