--- a/Calander.html
+++ b/Calander.html
@@ -53,7 +53,7 @@
     <div class="credits">
       <a href="https://youtube.com/@trekzest?si=afQUHYcYcX2vICoU">
         Created with <span><i class="fas fa-heart"></i></span> by
-        <span>Open Source Coding</span>
+        <span>TREKZEST</span>
       </a>
     </div>
 
