--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drag and Drop</title>
+    <title>task scheduler</title>
     <link rel="icon" type="image/png" href="">
     <link rel="stylesheet" href="Task.css">
 </head>
