--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
             <li><a href="List.html">TO DO</a></li>
             <li><a href="Calculator.html">Calculator</a></li>
             <li><a href="Quiz.html">quiz</a></li>
+            <li><a href="Rock.html">Rock paper scissors</a></li>
         </ul>
 </center>
         </div>
