--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             <li><a href="Calculator.html">Calculator</a></li>
             <li><a href="Quiz.html">quiz</a></li>
             <li><a href="Rock.html">Rock paper scissors</a></li>
+               <li><a href="Tic.html">Tic toc toe</a></li>
         </ul>
 </center>
         </div>
