--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
             <li><a href="Quiz.html">quiz</a></li>
             <li><a href="Rock.html">Rock paper scissors</a></li>
                <li><a href="Tic.html">Tic toc toe</a></li>
+                  <li><a href="Currency.html">currency converter </a></li>
         </ul>
 </center>
         </div>
