--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
             <li><a href="Rock.html">Rock paper scissors</a></li>
                <li><a href="Tic.html">Tic toc toe</a></li>
                   <li><a href="Currency.html">currency converter </a></li>
+                     <li><a href="Timeboxing.html">Time-boxing </a></li>
         </ul>
 </center>
         </div>
