--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                <li><a href="Tic.html">Tic toc toe</a></li>
                   <li><a href="Currency.html">currency converter </a></li>
                      <li><a href="Timeboxing.html">Time-boxing </a></li>
+                          <li><a href="Notes.html">notes </a></li>
         </ul>
 </center>
         </div>
