--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         </ul>
     </div>
 
-
+                     <center><a href="Joke.html">DON'T LAUGH CHALLENGE </a></center>
   <!-- Script -->
     <script src="Task.js"></script>
 </body>
