--- a/index.html
+++ b/index.html
@@ -242,7 +242,15 @@
         </ul>
     </div>
 
-                     <center><a href="Joke.html">DON'T LAUGH CHALLENGE </a></center>
+                   <center>
+    <nav class="navbar">
+        <ul class="nav-list">
+            <li><a href="Joke.html">DON'T LAUGH CHALLENGE</a></li>
+           
+        </ul>
+</center>
+        </div>
+    </nav>
   <!-- Script -->
     <script src="Task.js"></script>
 </body>
