--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
     <nav class="navbar">
         <ul class="nav-list">
             <li><a href="Joke.html">DON'T LAUGH CHALLENGE</a></li>
+               <li><a href="Logic.html">DEADLINES</a></li>
            
         </ul>
 </center>
